force-app/main/default/objects/AB_Test__c/AB_Test__c.object-meta.xml
<CustomObject>
    <description>A/B Test configuration and management for EventEase optimization</description>
    <label>A/B Test</label>
    <nameField>
        <displayFormat>ABT-{00000}</displayFormat>
        <label>A/B Test Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A/B Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>