force-app/main/default/objects/AB_Test__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date for the A/B test</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>