force-app/main/default/objects/AB_Test__c/fields/Hypothesis__c.field-meta.xml
<CustomField>
    <fullName>Hypothesis__c</fullName>
    <description>The hypothesis being tested in this A/B test</description>
    <label>Hypothesis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>