force-app/main/default/objects/AB_Test__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date for the A/B test</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>