force-app/main/default/objects/AB_Test__c/fields/Test_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Name__c</fullName>
    <description>Name of the A/B test for identification</description>
    <label>Test Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>