force-app/main/default/objects/AB_Test__c/fields/Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Type__c</fullName>
    <description>Type of A/B test being conducted</description>
    <label>Test Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registration Form</fullName>
            </value>
            <value>
                <fullName>Event Page Layout</fullName>
            </value>
            <value>
                <fullName>Email Template</fullName>
            </value>
            <value>
                <fullName>Call to Action</fullName>
            </value>
            <value>
                <fullName>UI Component</fullName>
            </value>
            <value>
                <fullName>Web-to-Lead Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>