force-app/main/default/objects/AB_Test__c/fields/Traffic_Split__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Split__c</fullName>
    <description>Percentage of traffic allocated to variant A (remainder goes to variant B)</description>
    <label>Traffic Split % (Variant A)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>